--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
-  "keywords": ["kobo", "excel", "report", "exceljs"],
+  "keywords": [
+    "kobo",
+    "excel",
+    "report",
+    "exceljs"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "exceljs": "^4.4.0",
     "axios": "^1.6.5",
     "dotenv": "^16.4.1",
+    "ejs": "^4.0.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
     "image-size": "^1.1.1"
   },
   "devDependencies": {
